# typemux-cc

./: .gitignore  .lsp.json  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  hooks.json  install.sh  marketplace.json  renovate.json
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/plugin-test-cycle/: SKILL.md
.claude/skills/publish/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: why-lsp.md
src/: backend.rs  backend_pool.rs  backend_state.rs  config.rs  doctor.rs  error.rs  framing.rs  lib.rs  main.rs  message.rs  proxy.rs  state.rs  venv.rs
src/proxy/: backend_dispatch.rs  client_dispatch.rs  diagnostics.rs  document.rs  fanout.rs  initialization.rs  mod.rs  pool_management.rs
tests/: crash_recovery_test.rs  doctor_test.rs  multi_venv_test.rs  smoke_test.rs  venv_detection_test.rs
tests/support/: mod.rs
