[package]
name = "typemux-cc"
version = "0.1.13"
edition = "2021"
rust-version = "1.75"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lsp-types = "0.97"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "2.0"
anyhow = "1.0"
bytes = "1.9"
url = "2.5"
clap = { version = "4.5", features = ["derive", "env"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"

[profile.release]
lto = true
strip = true
